# kupcake

./: .gitignore  .gitmodules  .rust-analyzer.json  .zshrc  CLAUDE.md  Cargo.toml  Justfile  QUICKSTART.md  README.md  docker-compose.yml  env.sample  fix-dashboards.sh  generate-jwt.sh  stack.sh
.github/workflows/: ci.yml  integration.yml
crates/deploy/: Cargo.toml
crates/deploy/src/: accounts.rs  bench.rs  builder.rs  config_resolve.rs  deployer.rs  deployment_hash.rs  docker.rs  faucet.rs  fs.rs  health.rs  inspect.rs  l1_genesis.rs  l2_stack.rs  lib.rs  metrics.rs  node_lifecycle.rs  registry.rs  rpc.rs  service.rs  snapshot_download.rs  spam.rs  status.rs
crates/deploy/src/services/: l2_node.rs  mod.rs
crates/deploy/src/services/anvil/: cmd.rs  mod.rs
crates/deploy/src/services/grafana/: mod.rs
crates/deploy/src/services/kona_node/: cmd.rs  mod.rs  rpc.rs
crates/deploy/src/services/op_batcher/: cmd.rs  mod.rs
crates/deploy/src/services/op_challenger/: cmd.rs  mod.rs
crates/deploy/src/services/op_conductor/: cmd.rs  mod.rs
crates/deploy/src/services/op_deployer/: mod.rs
crates/deploy/src/services/op_proposer/: cmd.rs  mod.rs
crates/deploy/src/services/op_reth/: cmd.rs  mod.rs  rpc.rs
crates/deploy/src/traits/: context.rs  deployer.rs  l2_fleet.rs  mod.rs  runner.rs  service.rs  stages.rs  standard.rs
crates/deploy/tests/: config_resolution_test.rs  integration_test.rs  live_integration_test.rs  monitoring_test.rs  node_lifecycle_test.rs  registry_test.rs  restart_test.rs  snapshot_download_test.rs  snapshot_test.rs
crates/deploy/tests/common/: mod.rs
docs/: README.md
docs/architecture/: overview.md
docs/developer-guide/: README.md  adding-services.md
docs/examples/: README.md  mcp-config.json  test-examples.sh
docs/getting-started/: first-deployment.md  installation.md  quickstart.md  understanding-output.md
docs/services/: README.md
docs/user-guide/: cleanup-and-restart.md  cli-reference.md  configuration-file.md  docker-images.md  environment-variables.md  l1-sources.md  mcp-integration.md  monitoring.md  multi-sequencer.md  network-interaction.md  port-management.md  troubleshooting.md
grafana/: README.md
grafana/dashboards/: batcher.json  flashblocks.json  kona-overview.json  reth-overview.json  reth-performance.json  reth-state-growth.json
grafana/datasources/: prometheus.yml
prometheus/: prometheus.yml
src/: cli.rs  lib.rs  main.rs
src/deploy/: anvil.rs  cmd_builders.rs  fs.rs  (+5 more)
(+32 files in other folders)
